# llm-hallucination-detector

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_DEPLOY.md  api.py  app.py  build_index.py  config.py  docker-compose.yml  environment.yml  evaluate.py  health_check.py  pipeline.py  project_summary.md  pyproject.toml  requirements.txt  scratch_deberta.py  scratch_test.py  scratch_test2.py  setup.py  setup.sh  test_integration.py  test_retrieval.py
.github/workflows/: ci.yml
api/: main.py  middleware.py  models.py
data/: download_datasets.py
data/index/: chunks.jsonl  embeddings.npy  metadata.json
detection/: ensemble.py  retriever.py  scorer.py  span_detector.py
evaluation/: baselines.py  benchmarks.py  metrics.py
experiments/: ablation.py  generate_figures.py  tracking.py
knowledge_base/: builder.py  embedder.py  faiss_index.py
paper/: paper_draft.md
scripts/: demo.py
tests/: integration_test.py  test_detection.py  test_knowledge_base.py
ui/: app.py
utils/: __init__.py  nli.py  selfcheck.py  taxonomy.py
